--- a/draft/Makefile
+++ b/draft/Makefile
@@ -3,7 +3,9 @@ all:
 	bibtex draft
 	latex draft.tex
 	latex draft.tex
-	dvipdfmx draft.dvi
+#	dvipdfmx draft.dvi
+	dvips -t letter -o draft.ps draft.dvi
+	ps2pdf draft.ps
 
 clean:
 	rm -fr *~ *.log *.aux *.bbl *.blg *.dvi
